--- a/styles/main.less
+++ b/styles/main.less
@@ -662,13 +662,11 @@ nav#mobile-nav {
 	}
 }
 #archive {
-	width: 100%;
-	background: url('../img/divider-archive.jpg') top center fixed;
+	background: url('../img/divider-archive.jpg') no-repeat center center fixed;
 	.background-size(cover);
 }
 #resume {
-	width: 100%;
-	background: url('../img/divider-resume.jpg') top center fixed;
+	background: url('../img/divider-resume.jpg') no-repeat center center fixed;
 	.background-size(cover);
 }
 .divider {
@@ -795,6 +793,47 @@ nav#mobile-nav {
 			}
 		}
 	}
+	#archive { background-attachment: scroll; }
+	#resume { background-attachment: scroll; }
+	.divider {
+		height: 350px;
+		.wrapper {
+			padding-top: 125px;
+			h1 { color: rgba(237,237,252,0.75); }
+			a.btn {
+				background-color: rgba(237,237,252,0.75);
+				border: rgba(237,237,252,0.75);
+				color: @blue-darkest;
+				font-size: 18px;
+				line-height: 18px;
+				margin-top: 25px;
+				padding: 10px 14px;
+			}
+		}
+	}
+	#contact {
+		height: 660px;
+		background-position: 50% 280%;
+		.wrapper {
+			margin-top: 60px;
+			max-width: 380px;
+			h3 {
+				font-size: 34px;
+			}
+			ul {
+				padding-top: 10px;
+				li {
+					margin: 0 12px 0 0;
+					a {
+						i {
+							font-size: 42px;
+							.transition(all 0.2s ease-in-out);
+						}
+					}
+				}
+			}
+		}
+	}
 
 }
 
@@ -844,8 +883,14 @@ nav#mobile-nav {
 			}
 		}
 	}
-	nav#main-nav { display: none; }
-	nav#mobile-nav { display: block; }
+	nav#mobile-nav {
+		display: block;
+		ul {
+			li {
+				a { padding: 6px 0; }
+			}
+		}
+	}
 	#home {
 		background-image: none;
 		height: 400px;
@@ -905,18 +950,8 @@ nav#mobile-nav {
 		.wrapper {
 			padding-top: 65px;
 			h1 {
-				color: rgba(237,237,252,0.85);
 				font-size: 22px;
 				font-weight: bold;				
-			}
-			a.btn {
-				background-color: rgba(237,237,252,0.85);
-				border: rgba(237,237,252,0.85);
-				color: @blue-darkest;
-				font-size: 14px;
-				line-height: 14px;
-				margin-top: 10px;
-				padding: 8px 12px;
 			}
 		}
 	}
