--- a/styles/main.less
+++ b/styles/main.less
@@ -372,7 +372,8 @@ nav#main-nav {
 }
 nav#mobile-nav {
 	display: none;
-	background-color: @blue-darker;
+	background-color: rgba(38,38,76,0.97);
+	//border-top: 1px solid @blue-darkest;
 	position: fixed;
 		left: 0;
 		bottom: 0;
@@ -380,7 +381,6 @@ nav#mobile-nav {
 	z-index: 999;
 	ul {
 		li {
-			background-color: @blue-darkest;
 			border-right: 1px solid @blue-dark;
 			display: block;
 			float: left;
@@ -399,21 +399,11 @@ nav#mobile-nav {
 				padding: 6px 0;
 				i {
 					display: block;
+					font-size: 28px;
+					margin-bottom: 2px;
 					&.fa-home {
 						font-size: 30px;
 						margin-bottom: -1px;
-					}
-					&.fa-star {
-						font-size: 28px;
-						margin-bottom: 2px;
-					}
-					&.fa-user {
-						font-size: 28px;
-						margin-bottom: 2px;
-					}
-					&.fa-email {
-						font-size: 28px;
-						margin-bottom: 2px;
 					}
 				}
 			}
@@ -627,11 +617,11 @@ nav#mobile-nav {
 	background-color: @blue-light;
 	.wrapper {
 		margin: 40px auto 80px auto;
-		max-width: 300px;
+		max-width: 340px;
 		text-align: center;
 		h3 {
 			font-family: 'lora',serif;
-			font-size: 26px;
+			font-size: 30px;
 			a {
 				color: @blue;
 				.transition(all 0.2s ease-in-out);
@@ -650,7 +640,7 @@ nav#mobile-nav {
 				a {
 					i {
 						color: @blue;
-						font-size: 30px;
+						font-size: 34px;
 						.transition(all 0.2s ease-in-out);
 						&:hover {
 							color: @blue-darkest;
@@ -775,7 +765,18 @@ nav#mobile-nav {
 		display: block;
 		ul {
 			li {
-				a { padding: 16px 0; }
+				font-size: 12px;
+				a {
+					padding: 12px 0;
+					i {
+						font-size: 34px;
+						margin-bottom: 2px;
+						&.fa-home {
+							font-size: 36px;
+							margin-bottom: -1px;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -887,7 +888,19 @@ nav#mobile-nav {
 		display: block;
 		ul {
 			li {
-				a { padding: 6px 0; }
+				font-size: 10px;
+				a {
+					padding: 6px 0;
+					i {
+						display: block;
+						font-size: 24px;
+						margin-bottom: 2px;
+						&.fa-home {
+							font-size: 26px;
+							margin-bottom: -1px;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -924,7 +937,7 @@ nav#mobile-nav {
 	#contact {
 		background: none;
 		background-color: @blue-light;
-		height: 400px;
+		height: 280px;
 		.wrapper {
 			margin: 40px auto;
 			max-width: 240px;
@@ -934,7 +947,7 @@ nav#mobile-nav {
 			ul {
 				padding-top: 10px;
 				li {
-					margin: 0 8px 0 0;
+					margin: 0 10px 0 0;
 					a {
 						i {
 							font-size: 26px;
@@ -948,10 +961,16 @@ nav#mobile-nav {
 	.divider {
 		height: 200px;
 		.wrapper {
-			padding-top: 65px;
+			padding-top: 55px;
 			h1 {
 				font-size: 22px;
 				font-weight: bold;				
+			}
+			a.btn {
+				font-size: 16px;
+				line-height: 16px;
+				margin-top: 10px;
+				padding: 10px 12px;
 			}
 		}
 	}
